--- a/other/DockerfileMLE
+++ b/other/DockerfileMLE
@@ -1,7 +1,11 @@
 FROM pytorch/pytorch:2.4.1-cuda12.1-cudnn9-devel
 
 RUN apt-get update
-RUN apt-get install python3-dev python3-distutils vim screen wget g++ git git-lfs -y
+RUN apt-get install python3-dev python3-distutils vim screen wget g++ git git-lfs texlive-latex-base \
+    texlive-fonts-recommended \
+    texlive-latex-extra \
+    texlive-science \
+    -y
 RUN wget https://bootstrap.pypa.io/get-pip.py
 RUN python3 get-pip.py
 RUN pip3 install transformers==4.49.0 \
