--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,4 @@ vastai-sdk == 0.1.16
 duckduckgo_search == 7.5.1
 git+https://github.com/IlyaGusev/acl-anthology
 markdown == 3.7.0
+types-markdown == 3.7.0.20250322
