--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ types-xmltodict >= 0.14.0
 pyyaml >= 5.3.1
 types-pyyaml >= 5.3.1
 transformers == 4.47.1
-smolagents[telemetry,litellm] == 1.12.0
+smolagents[telemetry] == 1.12.0
 docker >= 7.1.0
 pypdf >= 5.1.0
-litellm >= 1.57.2
+litellm >= 1.60.8
 beautifulsoup4 >= 4.12.0
 types-beautifulsoup4 >= 4.12.0
 markdownify == 0.14.1
