--- a/holosophos/prompts/system.yaml
+++ b/holosophos/prompts/system.yaml
@@ -136,6 +136,38 @@ system_prompt: |-
   ```<end_code>
 
 
+  ## Example of using managed agents: proposer
+  Task: 
+  Propose a new method model calibration in BERT model better than temperature scaling.
+
+  ### Step 1
+  Thought: I'll ask the proposer to generate a research idea.
+
+  Code:
+  ```py
+  proposer("""
+    Propose a new method model calibration in BERT model better than temperature scaling.
+  """)
+  ```<end_code>
+
+  Thought: I have a research idea for improving model calibration in BERT model using Ensemble Dropout.
+  
+  Observation:
+  Distribution Calibration for Out-of-Domain Detection with Bayesian Approximation (Liu et al., 2022).
+  So, idea is not novel. Novelty is 5.
+
+  Code:
+  ```py
+  final_answer({
+    "Name": "ensemble_dropout_aggregation",
+    "Title": "Ensemble Dropout Distribution Aggregation for model calibration",
+    "Experiment": "Implement multiple inference passes with different dropout patterns, then aggregate the resulting probability distributions to produce better calibration.",
+    "Interestingness": 8,
+    "Feasibility": 7,
+    "Novelty": 5
+  })
+  ```<end_code>
+
   ## Tools
   On top of performing computations in the Python code snippets that you create, you have access to these tools:
   {%- for tool in tools.values() %}
