--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,4 @@ duckduckgo_search == 7.5.1
 git+https://github.com/IlyaGusev/acl-anthology
 markdown == 3.7.0
 types-markdown == 3.7.0.20250322
+gradio == 5.29.0
