--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -11,26 +11,24 @@ jobs:
     steps:
     - name: Checkout github repo
       uses: actions/checkout@v3
-    - name: Set up Python 3
-      uses: actions/setup-python@v2
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
-        python-version: "3.11"
+        version: "0.7.4"
+    - name: "Set up Python"
+      uses: actions/setup-python@v5
+      with:
+        python-version-file: "pyproject.toml"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 black pytest mypy
-        pip install -r requirements.txt
+        uv venv .venv
+        source .venv/bin/activate
+        make install
     - name: Lint with flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 --count --exit-zero --statistics --ignore=W503,E203
-    - name: MyPy
-      run: |
-        mypy . --strict --explicit-package-bases
+        make validate
     - name: Tests
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        pytest -s
+        make tests
