--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,12 +30,15 @@ dependencies = [
     "acl-anthology@git+https://github.com/IlyaGusev/acl-anthology",
     "markdown==3.7.0",
     "types-markdown==3.7.0.20250322",
-    "gradio==5.29.0"
+    "gradio==5.29.0",
+    "black==25.1.0",
+    "mypy==1.16.0",
+    "flake8==7.2.0",
 ]
 
 [tool.flake8]
 exclude = ["*/__init__.py"]
-ignore = "E203,F403,E501,SIM115,PIE786,W503"
+ignore = "E203,F403,E501,SIM115,PIE786,W503,E226"
 max-line-length = 120
 
 [tool.mypy]
