--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "black==25.1.0",
     "mypy==1.16.0",
     "flake8==7.2.0",
+    "types-xmltodict>=0.14.0.20241009",
 ]
 
 [tool.flake8]
