--- a/holosophos/prompts/mle_solver.yaml
+++ b/holosophos/prompts/mle_solver.yaml
@@ -46,7 +46,7 @@ system_prompt: |-
 
   Code:
   ```py
-  pip3 install scikit-learn
+  remote_bash("pip3 install scikit-learn")
   ```<end_code>
 
   Observation:
