--- a/other/DockerfileMLE
+++ b/other/DockerfileMLE
@@ -1,5 +1,6 @@
 FROM pytorch/pytorch:2.4.1-cuda12.1-cudnn9-devel
 
+ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get install python3-dev python3-distutils vim screen wget g++ git git-lfs texlive-latex-base \
     texlive-fonts-recommended \
@@ -19,4 +20,7 @@ RUN pip3 install transformers==4.49.0 \
     scikit-learn==1.6.0 \
     torchvision==0.19.1 \
     torchaudio==2.4.1 \
-    matplotlib==3.10.1
+    matplotlib==3.10.1 \
+    xgboost==3.0.2 \
+    smolagents==1.17.0 \
+    lightgbm==4.6.0
