--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,14 +27,14 @@ dependencies = [
     "arize-phoenix-otel>=0.8.0",
     "vastai-sdk==0.1.16",
     "duckduckgo_search==7.5.1",
-    "acl-anthology@git+https://github.com/IlyaGusev/acl-anthology",
+    "acl-anthology==0.5.2",
     "markdown==3.7.0",
     "types-markdown==3.7.0.20250322",
     "gradio==5.29.0",
     "black==25.1.0",
     "mypy==1.16.0",
     "flake8==7.2.0",
-    "types-xmltodict>=0.14.0.20241009",
+    "types-xmltodict>=0.14.0.20241009"
 ]
 
 [tool.flake8]
