--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "flake8==7.2.0",
     "types-xmltodict>=0.14.0.20241009",
     "pytest>=8.4.1",
-    "academia-mcp==0.0.4",
+    "academia-mcp==0.0.7",
+    "mle-kit-mcp==0.0.1",
 ]
 
 [tool.flake8]
