--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ dependencies = [
     "pyyaml>=5.3.1",
     "types-pyyaml>=5.3.1",
     "transformers==4.47.1",
-    "smolagents[telemetry]==1.17.0",
     "docker>=7.1.0",
     "litellm==1.60.8",
     "beautifulsoup4>=4.12.0",
@@ -35,6 +34,7 @@ dependencies = [
     "pytest>=8.4.1",
     "academia-mcp==0.0.7",
     "mle-kit-mcp==0.0.1",
+    "codearkt==0.0.5",
 ]
 
 [tool.flake8]
